[ALL] - fixed spacing and gutter issues for laptop and tablet for itinerary pages

--- a/packages/navigate-theme/src/styles/pages/_destination.scss
+++ b/packages/navigate-theme/src/styles/pages/_destination.scss
@@ -7,9 +7,9 @@
     grid-column-gap: 5rem;
 
     @include respond(laptop) {
-      max-width: 120rem;
-      grid-template-columns: 81.2rem 34.1rem;
-      grid-column-gap: 2.69rem;
+      max-width: 117rem;
+      grid-template-columns: 81.2rem 34rem;
+      grid-column-gap: 1.6rem;
     }
 
     @include respond(tablet) {
